syntax = "proto3";

package user;

service UserService {
  rpc findOne (UserWhereUniqueInput) returns (User) {}
  rpc findMany (UserWhereInput) returns (UserList) {}
  rpc update (UserUpdateInput) returns (User) {}
}

message User {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  bool is_verified = 5;
}

message UserList {
  repeated User users = 1;
}

message UserWhereUniqueInput {
  oneof unique {
    string id = 1;
    string email = 2;
  }
}

message UserWhereInput {
  oneof input {
    string first_name = 1;
    string last_name = 2;
    bool is_verified = 3;
  }
}

message UserUpdateInput {
  oneof where {
    string id = 1;
    string email = 2;
  }

  oneof input {
    string first_name = 4;
    string last_name = 5;
    string avatar = 6;
    bool is_verified = 7;
  }
}
